--- a/games/Idle Breakout/index.html
+++ b/games/Idle Breakout/index.html
@@ -1,105 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <title>Made by Kodiqi</title>
-    <style>
-      html, body {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-        background: #000;
-        overflow: hidden;
-      }
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>Made by Kodiqi</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      background: #000;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
-      #gm4html5_div_id {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background: #000;
-      }
+    #gm4html5_div_id {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      background: #000;
+    }
 
-      canvas {
-        display: block;
-        background: #000;
-        image-rendering: pixelated;
-        cursor: auto;
-      }
+    canvas {
+      display: block;
+      background: #000;
+      cursor: auto;
+      image-rendering: pixelated;
+      -ms-touch-action: none;
+    }
 
-      /* Fullscreen mode */
-      :fullscreen #gm4html5_div_id,
-      :-webkit-full-screen #gm4html5_div_id {
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: #000;
-      }
+    :fullscreen #gm4html5_div_id,
+    :-webkit-full-screen #gm4html5_div_id {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      background: #000;
+    }
+  </style>
+</head>
 
-      :fullscreen canvas,
-      :-webkit-full-screen canvas {
-        width: auto;
-        height: auto;
-        max-width: 100%;
-        max-height: 100%;
-      }
+<body>
+<div class="gm4html5_div_class" id="gm4html5_div_id">
+  <canvas id="canvas" width="768" height="768">
+    <p>Your browser doesn't support HTML5 canvas.</p>
+  </canvas>
+</div>
 
-      /* Optional: GameMaker login box styling */
-      div.gm4html5_login {
-        padding: 20px;
-        position: absolute;
-        border: solid 2px #000;
-        background-color: #404040;
-        color: #00ff00;
-        border-radius: 15px;
-        box-shadow: #101010 20px 20px 40px;
-      }
-      div.gm4html5_cancel_button { float: right; }
-      div.gm4html5_login_button { float: left; }
-      div.gm4html5_login_header { text-align: center; }
-    </style>
-  </head>
+<script src="https://cdn.jsdelivr.net/gh/bobydob/JSEngine@9b6eab8976a7acc4aee72479af65647693633abc/build/id-br/ibo.js"></script>
+<script>
+window.onload = function() {
+  GameMaker_Init();
 
-  <body>
-    <div class="gm4html5_div_class" id="gm4html5_div_id">
-      <canvas id="canvas" width="768" height="768">
-        <p>Your browser doesn't support HTML5 canvas.</p>
-      </canvas>
-    </div>
+  const canvas = document.getElementById("canvas");
+  const container = document.getElementById("gm4html5_div_id");
 
-    <script src="https://cdn.jsdelivr.net/gh/bobydob/JSEngine@9b6eab8976a7acc4aee72479af65647693633abc/build/id-br/ibo.js"></script>
-    <script>
-      window.onload = function () {
-        GameMaker_Init();
+  function resizeGame() {
+    // Keep square aspect ratio
+    const minSide = Math.min(window.innerWidth, window.innerHeight);
+    const scale = minSide / 768;
 
-        const canvas = document.getElementById("canvas");
-        const container = document.getElementById("gm4html5_div_id");
+    // Set visual size
+    canvas.style.width = (768 * scale) + "px";
+    canvas.style.height = (768 * scale) + "px";
 
-        function resizeGame() {
-          const size = Math.min(window.innerWidth, window.innerHeight);
-          canvas.width = 768;  // internal resolution (GameMaker uses this)
-          canvas.height = 768;
-          canvas.style.width = size + "px";
-          canvas.style.height = size + "px";
-          container.style.width = size + "px";
-          container.style.height = size + "px";
-        }
+    // Update canvas bounding info for mouse correction
+    const rect = canvas.getBoundingClientRect();
+    canvas._offsetX = rect.left;
+    canvas._offsetY = rect.top;
+    canvas._scale = scale;
+  }
 
-        window.addEventListener("resize", resizeGame);
-        resizeGame();
-      };
-    </script>
-  </body>
+  // Correct mouse events relative to canvas
+  function fixMouse(e) {
+    if (!canvas._scale) return;
+    const rect = canvas.getBoundingClientRect();
+    // Correct coordinates relative to scaled & centered canvas
+    e.offsetX = (e.clientX - rect.left) * (768 / (rect.width));
+    e.offsetY = (e.clientY - rect.top) * (768 / (rect.height));
+  }
+
+  ["mousedown", "mouseup", "mousemove", "click"].forEach(eventType => {
+    canvas.addEventListener(eventType, fixMouse, true);
+  });
+
+  window.addEventListener("resize", resizeGame);
+  document.addEventListener("fullscreenchange", resizeGame);
+  document.addEventListener("webkitfullscreenchange", resizeGame);
+
+  resizeGame();
+};
+</script>
+</body>
 </html>
