--- a/games/Idle Breakout/index.html
+++ b/games/Idle Breakout/index.html
@@ -1,51 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Made by Kodiqi</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
-      background: #000;
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+<title>Made by Kodiqi</title>
+<style>
+  html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-    #gm4html5_div_id {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      height: 100%;
-      background: #000;
-    }
+  #gm4html5_div_id {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background: #000;
+  }
 
-    canvas {
-      display: block;
-      background: #000;
-      cursor: auto;
-      image-rendering: pixelated;
-    }
+  canvas {
+    display: block;
+    background: #000;
+    cursor: auto;
+    image-rendering: pixelated;
+    /* CSS scaling only, internal buffer unchanged */
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    aspect-ratio: 1 / 1; /* keep square */
+  }
 
-    :fullscreen #gm4html5_div_id,
-    :-webkit-full-screen #gm4html5_div_id {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      height: 100%;
-      background: #000;
-    }
-  </style>
+  :fullscreen #gm4html5_div_id,
+  :-webkit-full-screen #gm4html5_div_id {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
+</style>
 </head>
-
 <body>
 <div class="gm4html5_div_class" id="gm4html5_div_id">
   <canvas id="canvas" width="768" height="768">
@@ -59,39 +63,20 @@
 window.onload = function() {
   GameMaker_Init();
 
+  // Optional: scale container to fit window while keeping aspect ratio
   const canvas = document.getElementById("canvas");
-  const container = document.getElementById("gm4html5_div_id");
 
-  function resizeGame() {
+  function resizeContainer() {
     const minSide = Math.min(window.innerWidth, window.innerHeight);
-    const scale = minSide / 768; // 768 = base size
-    canvas.style.width = (768 * scale) + "px";
-    canvas.style.height = (768 * scale) + "px";
-
-    // Store canvas position and scale for mouse correction
-    const rect = canvas.getBoundingClientRect();
-    canvas._offsetX = rect.left;
-    canvas._offsetY = rect.top;
-    canvas._scale = scale;
+    canvas.style.width = minSide + "px";
+    canvas.style.height = minSide + "px";
   }
 
-  // Fix mouse input by reversing the offset
-  function correctMouse(e) {
-    if (!canvas._scale) return;
-    // Offset relative to canvas and divide by scale to get original game coordinates
-    e.offsetX = (e.clientX - canvas._offsetX) / canvas._scale;
-    e.offsetY = (e.clientY - canvas._offsetY) / canvas._scale;
-  }
+  window.addEventListener("resize", resizeContainer);
+  document.addEventListener("fullscreenchange", resizeContainer);
+  document.addEventListener("webkitfullscreenchange", resizeContainer);
 
-  ["mousedown","mouseup","mousemove","click"].forEach(evt =>
-    canvas.addEventListener(evt, correctMouse, true)
-  );
-
-  window.addEventListener("resize", resizeGame);
-  document.addEventListener("fullscreenchange", resizeGame);
-  document.addEventListener("webkitfullscreenchange", resizeGame);
-
-  resizeGame();
+  resizeContainer();
 };
 </script>
 </body>
