--- a/games/Idle Breakout/index.html
+++ b/games/Idle Breakout/index.html
@@ -6,77 +6,72 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <title>Made by Kodiqi</title>
 <style>
-  html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    background: #000;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  html,body{
+    margin:0;
+    padding:0;
+    width:100%;
+    height:100%;
+    background:#000;
+    overflow:hidden;
+    display:flex;
+    justify-content:center;
+    align-items:center;
   }
-
-  #gm4html5_div_id {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    background: #000;
+  #gm4html5_div_id{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    background:#000;
+    width:100%;
+    height:100%;
   }
-
-  canvas {
-    display: block;
-    background: #000;
-    cursor: auto;
-    image-rendering: pixelated;
-    /* CSS scaling only, internal buffer unchanged */
-    width: 100%;
-    height: 100%;
-    max-width: 100%;
-    max-height: 100%;
-    aspect-ratio: 1 / 1; /* keep square */
+  canvas{
+    display:block;
+    background:#000;
+    image-rendering:pixelated;
+    cursor:auto;
   }
-
   :fullscreen #gm4html5_div_id,
-  :-webkit-full-screen #gm4html5_div_id {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
+  :-webkit-full-screen #gm4html5_div_id{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    width:100%;
+    height:100%;
   }
 </style>
 </head>
 <body>
 <div class="gm4html5_div_class" id="gm4html5_div_id">
   <canvas id="canvas" width="768" height="768">
-    <p>Your browser doesn't support HTML5 canvas.</p>
+    <p>Your browser doesn’t support HTML5 canvas.</p>
   </canvas>
 </div>
 
 <script src="https://cdn.jsdelivr.net/gh/bobydob/JSEngine@9b6eab8976a7acc4aee72479af65647693633abc/build/id-br/ibo.js"></script>
-
 <script>
-window.onload = function() {
+window.onload = function () {
   GameMaker_Init();
 
-  // Optional: scale container to fit window while keeping aspect ratio
   const canvas = document.getElementById("canvas");
+  const container = document.getElementById("gm4html5_div_id");
 
-  function resizeContainer() {
+  function resizeGame() {
+    // keep square aspect
     const minSide = Math.min(window.innerWidth, window.innerHeight);
-    canvas.style.width = minSide + "px";
-    canvas.style.height = minSide + "px";
+
+    // set BOTH canvas width/height attributes, not just CSS
+    canvas.width  = Math.floor(minSide);
+    canvas.height = Math.floor(minSide);
+
+    // center with flexbox (already handled by CSS)
   }
 
-  window.addEventListener("resize", resizeContainer);
-  document.addEventListener("fullscreenchange", resizeContainer);
-  document.addEventListener("webkitfullscreenchange", resizeContainer);
+  window.addEventListener("resize", resizeGame);
+  document.addEventListener("fullscreenchange", resizeGame);
+  document.addEventListener("webkitfullscreenchange", resizeGame);
 
-  resizeContainer();
+  resizeGame();
 };
 </script>
 </body>
