deploy: 3ffe266ee3314c3310485f38e7b20734ccf167cd

--- a/index.html
+++ b/index.html
@@ -1194,9 +1194,9 @@
       <img class="thumb" src="games/Get Yoked/thumbnail.jpg" alt="Get Yoked">
     </div>
     <div class="card-title">Get Yoked</div>
-  </div><div class="card game-card" data-index="69" data-folder="Gladdihoppers" data-name="gladdihoppers" onclick="prepareGame('Gladdihoppers','Gladdihoppers','games/Gladdihoppers/thumbnail.jpg')">
-    <div class="thumb-container" style="--thumb-url: url('games/Gladdihoppers/thumbnail.jpg')">
-      <img class="thumb" src="games/Gladdihoppers/thumbnail.jpg" alt="Gladdihoppers">
+  </div><div class="card game-card" data-index="69" data-folder="Gladdihoppers" data-name="gladdihoppers" onclick="prepareGame('Gladdihoppers','Gladdihoppers','games/Gladdihoppers/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Gladdihoppers/thumbnail.png')">
+      <img class="thumb" src="games/Gladdihoppers/thumbnail.png" alt="Gladdihoppers">
     </div>
     <div class="card-title">Gladdihoppers</div>
   </div><div class="card game-card" data-index="70" data-folder="Gobble" data-name="gobble" onclick="prepareGame('Gobble','Gobble','games/Gobble/thumbnail.jpg')">
@@ -1567,9 +1567,9 @@
       <img class="thumb" src="games/Get Yoked/thumbnail.jpg" alt="Get Yoked">
     </div>
     <div class="card-title">Get Yoked</div>
-  </div><div class="card game-card" data-index="50" data-folder="Gladdihoppers" data-name="gladdihoppers" onclick="prepareGame('Gladdihoppers','Gladdihoppers','games/Gladdihoppers/thumbnail.jpg')">
-    <div class="thumb-container" style="--thumb-url: url('games/Gladdihoppers/thumbnail.jpg')">
-      <img class="thumb" src="games/Gladdihoppers/thumbnail.jpg" alt="Gladdihoppers">
+  </div><div class="card game-card" data-index="50" data-folder="Gladdihoppers" data-name="gladdihoppers" onclick="prepareGame('Gladdihoppers','Gladdihoppers','games/Gladdihoppers/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Gladdihoppers/thumbnail.png')">
+      <img class="thumb" src="games/Gladdihoppers/thumbnail.png" alt="Gladdihoppers">
     </div>
     <div class="card-title">Gladdihoppers</div>
   </div><div class="card game-card" data-index="51" data-folder="Gobble" data-name="gobble" onclick="prepareGame('Gobble','Gobble','games/Gobble/thumbnail.jpg')">
