--- a/games/Dreader/index.html
+++ b/games/Dreader/index.html
@@ -1,49 +1,88 @@
-<!-- Ultimate Game Stash file--> 
-<!-- For the regularly updating doc go to https://docs.google.com/document/d/1_FmH3BlSBQI7FGgAQL59-ZPe8eCxs35wel6JUyVaG8Q/ -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Ultimate Game Stash</title>
 
-
-
-</style><style type="text/css">#button {
-  display:none;
-}
-.imgb_vis {
-  animation: imgb-animation 7s linear;
-}
-@keyframes imgb-animation {
-  10% {
-    transform: translateX(0);
+<style>
+  html, body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden; /* 🔥 removes scrollbars */
+    width: 100%;
+    height: 100%;
+    background: black;
+    cursor: none; /* hides cursor */
   }
-  20% {
-    transform: translateX(100px);
+
+  canvas {
+    display: block;
+    width: 100vw;  /* fills full width */
+    height: 100vh; /* fills full height */
+    object-fit: contain; /* keeps aspect ratio */
   }
-  90% {
-    transform: translateX(100px);
+
+  #button {
+    display: none;
   }
-  100% {
-    transform: translateX(0);
+
+  .imgb_vis {
+    animation: imgb-animation 7s linear;
   }
-}</style></head><body dir="ltr" style="cursor: none;"><script type="module">
-            import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/computer.class.js';
-            import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/director.class.js';
-            import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/maze.class.js';
-            import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/monster.class.js';
-            import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/player.class.js';
-            import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/transition.class.js';
-            import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/world.class.js';
 
-            import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/core/client.class.js';
-        </script>
-        <canvas width="679" height="465" style="width: 1358px; height: 931px;">Canvas is not supported</canvas>
+  @keyframes imgb-animation {
+    10% { transform: translateX(0); }
+    20% { transform: translateX(100px); }
+    90% { transform: translateX(100px); }
+    100% { transform: translateX(0); }
+  }
+</style>
+</head>
 
-        <div class="loading" style="visibility: hidden;"></div>
+<body>
+<script type="module">
+  import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/computer.class.js';
+  import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/director.class.js';
+  import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/maze.class.js';
+  import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/monster.class.js';
+  import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/player.class.js';
+  import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/transition.class.js';
+  import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/entities/world.class.js';
+  import 'https://372105836-173520588164830264.preview.editmysite.com/uploads/b/139890129-628557148986288450/files/js/core/client.class.js';
+</script>
 
-        <a alt="show credits" class="show-credits" style="visibility: visible;"></a>
+<canvas id="gameCanvas" width="679" height="465">Canvas is not supported</canvas>
 
-        <div class="credits">
-            <h3> <a href="https://donitz.itch.io/" target="_blank"></a></h3>
-        </div>
-		<script src=""></script>
-    
+<div class="loading" style="visibility: hidden;"></div>
+<a alt="show credits" class="show-credits" style="visibility: visible;"></a>
+<div class="credits">
+  <h3><a href="https://donitz.itch.io/" target="_blank"></a></h3>
+</div>
 
-<script>gadgets.util.runOnLoadHandlers();</script><script>window.google.csi.tickDl();
-</script></body></html>
+<script>
+  // 🔥 Dynamically resize the canvas to fit window
+  const canvas = document.getElementById('gameCanvas');
+  const ctx = canvas.getContext('2d');
+
+  function resizeCanvas() {
+    const aspect = 679 / 465;
+    let width = window.innerWidth;
+    let height = window.innerHeight;
+
+    if (width / height > aspect) {
+      width = height * aspect;
+    } else {
+      height = width / aspect;
+    }
+
+    canvas.style.width = width + 'px';
+    canvas.style.height = height + 'px';
+  }
+
+  window.addEventListener('resize', resizeCanvas);
+  resizeCanvas();
+</script>
+
+</body>
+</html>
