--- a/games/FNAF 3/index.html
+++ b/games/FNAF 3/index.html
@@ -1,38 +1,94 @@
-<!-- Ultimate Game Stash file--> 
+<!-- Ultimate Game Stash file -->
 <!-- For the regularly updating doc go to https://docs.google.com/document/d/1_FmH3BlSBQI7FGgAQL59-ZPe8eCxs35wel6JUyVaG8Q/ -->
-<!-- Made by genizy --> 
+<!-- Made by genizy -->
 
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-	<base href="https://cdn.jsdelivr.net/gh/genizy/fnaf@latest/3/">
-    <link rel="stylesheet" type="text/css" href="style.css"/>
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="HandheldFriendly" content="true" />
-    <title>Five Nights at Freddy's 3</title>
+  <base href="https://cdn.jsdelivr.net/gh/genizy/fnaf@latest/3/">
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="HandheldFriendly" content="true" />
+  <title>Five Nights at Freddy's 3</title>
+
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      background: black;
+      overflow: hidden; /* 🔥 removes scrollbars */
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    #MMFCanvas {
+      display: block;
+      width: 100vw;
+      height: 100vh;
+      object-fit: contain; /* keeps correct aspect ratio */
+      background: black;
+    }
+
+    #progress-container {
+      position: absolute;
+      bottom: 30px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 80%;
+      color: white;
+      font-family: sans-serif;
+      text-align: center;
+    }
+  </style>
 </head>
 
 <body>
-    <div style="display: inline-block; -webkit-user-select: none; text-align: left">
-        <canvas id="MMFCanvas" width="1280" height="720"> Your browser does not support Canvas, Please try again. </canvas>
-    </div>
-    <div id="progress-container">
-        <div style="margin-bottom: 6px;">Downloading... <span id="download-text">0%</span></div>
-        <div style="width: 100%; background: #444; border-radius: 6px; overflow: hidden;">
-            <div id="download-bar" style="height: 10px; background: #3b82f6; width: 0%; transition: width 0.2s;"></div>
-        </div>
-        <div style="margin: 12px 0 6px;">Extracting... <span id="extract-text">0%</span></div>
-        <div style="width: 100%; background: #444; border-radius: 6px; overflow: hidden;">
-            <div id="extract-bar" style="height: 10px; background: #10b981; width: 0%; transition: width 0.2s;"></div>
-        </div>
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-    <script src="main.js"></script>
-</body>
+  <canvas id="MMFCanvas" width="1280" height="720">
+    Your browser does not support Canvas, Please try again.
+  </canvas>
 
+  <div id="progress-container">
+    <div style="margin-bottom: 6px;">Downloading... <span id="download-text">0%</span></div>
+    <div style="width: 100%; background: #444; border-radius: 6px; overflow: hidden;">
+      <div id="download-bar" style="height: 10px; background: #3b82f6; width: 0%; transition: width 0.2s;"></div>
+    </div>
+    <div style="margin: 12px 0 6px;">Extracting... <span id="extract-text">0%</span></div>
+    <div style="width: 100%; background: #444; border-radius: 6px; overflow: hidden;">
+      <div id="extract-bar" style="height: 10px; background: #10b981; width: 0%; transition: width 0.2s;"></div>
+    </div>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+  <script src="main.js"></script>
+
+  <script>
+    // 🔥 Keep aspect ratio (16:9) & center canvas correctly
+    const canvas = document.getElementById('MMFCanvas');
+    function resizeCanvas() {
+      const aspect = 1280 / 720;
+      let width = window.innerWidth;
+      let height = window.innerHeight;
+
+      if (width / height > aspect) {
+        width = height * aspect;
+      } else {
+        height = width / aspect;
+      }
+
+      canvas.style.width = width + 'px';
+      canvas.style.height = height + 'px';
+    }
+
+    window.addEventListener('resize', resizeCanvas);
+    resizeCanvas();
+  </script>
+</body>
 </html>
