--- a/games/FNAF 3/index.html
+++ b/games/FNAF 3/index.html
@@ -1,19 +1,11 @@
-<!-- Ultimate Game Stash file -->
-<!-- For the regularly updating doc go to https://docs.google.com/document/d/1_FmH3BlSBQI7FGgAQL59-ZPe8eCxs35wel6JUyVaG8Q/ -->
-<!-- Made by genizy -->
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <base href="https://cdn.jsdelivr.net/gh/genizy/fnaf@latest/3/">
   <link rel="stylesheet" type="text/css" href="style.css" />
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <meta name="HandheldFriendly" content="true" />
   <title>Five Nights at Freddy's 3</title>
 
   <style>
@@ -22,19 +14,22 @@
       padding: 0;
       width: 100%;
       height: 100%;
+      overflow: hidden;
       background: black;
-      overflow: hidden; /* 🔥 removes scrollbars */
+    }
+
+    body {
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
     }
 
     #MMFCanvas {
       display: block;
-      width: 100vw;
-      height: 100vh;
-      object-fit: contain; /* keeps correct aspect ratio */
       background: black;
+      width: 100%;
+      height: 100%;
+      object-fit: contain; /* preserve aspect ratio */
     }
 
     #progress-container {
@@ -46,6 +41,7 @@
       color: white;
       font-family: sans-serif;
       text-align: center;
+      pointer-events: none;
     }
   </style>
 </head>
@@ -70,21 +66,28 @@
   <script src="main.js"></script>
 
   <script>
-    // 🔥 Keep aspect ratio (16:9) & center canvas correctly
+    // Maintain 16:9 aspect ratio, fill window without gaps
     const canvas = document.getElementById('MMFCanvas');
+
     function resizeCanvas() {
       const aspect = 1280 / 720;
-      let width = window.innerWidth;
-      let height = window.innerHeight;
+      let windowWidth = window.innerWidth;
+      let windowHeight = window.innerHeight;
 
-      if (width / height > aspect) {
-        width = height * aspect;
-      } else {
-        height = width / aspect;
-      }
+      // Determine scaling that completely fills screen in one direction
+      let scale = Math.max(windowWidth / 1280, windowHeight / 720);
 
-      canvas.style.width = width + 'px';
-      canvas.style.height = height + 'px';
+      // Compute displayed size
+      const displayWidth = 1280 * scale;
+      const displayHeight = 720 * scale;
+
+      canvas.style.width = displayWidth + 'px';
+      canvas.style.height = displayHeight + 'px';
+
+      // Center the canvas
+      canvas.style.position = 'absolute';
+      canvas.style.left = (windowWidth - displayWidth) / 2 + 'px';
+      canvas.style.top = (windowHeight - displayHeight) / 2 + 'px';
     }
 
     window.addEventListener('resize', resizeCanvas);
