--- a/games/FNAF 3/index.html
+++ b/games/FNAF 3/index.html
@@ -1,73 +1,43 @@
-<!-- Ultimate Game Stash file-->
-<!-- For the regularly updating doc go to https://docs.google.com/document/d/1_FmH3BlSBQI7FGgAQL59-ZPe8eCxs35wel6JUyVaG8Q/ -->
-<!-- Made by genizy -->
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <base href="https://cdn.jsdelivr.net/gh/genizy/fnaf@latest/3/">
-  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="style.css"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <meta name="HandheldFriendly" content="true" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Five Nights at Freddy's 3</title>
-
   <style>
-    html,
-    body {
+    html, body {
       margin: 0;
       padding: 0;
-      width: 100%;
       height: 100%;
-      overflow: hidden; /* 🔥 No scrollbars */
-      background-color: black;
+      width: 100%;
+      background: black; /* avoids gaps */
+      overflow: hidden;
     }
-
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-    }
-
     #MMFCanvas {
       display: block;
       width: 100vw;
       height: 100vh;
-      object-fit: contain; /* maintains aspect ratio */
+      object-fit: contain; /* keeps aspect ratio */
       background: black;
     }
-
     #progress-container {
       position: absolute;
-      bottom: 5%;
+      bottom: 20px;
       left: 50%;
       transform: translateX(-50%);
       width: 80%;
-      max-width: 500px;
       color: white;
       font-family: sans-serif;
-      font-size: 14px;
-      text-align: center;
-      z-index: 10;
-    }
-
-    #progress-container div {
-      user-select: none;
     }
   </style>
 </head>
-
 <body>
-  <div style="-webkit-user-select: none; text-align: left;">
-    <canvas id="MMFCanvas" width="1280" height="720">
-      Your browser does not support Canvas. Please try again.
-    </canvas>
-  </div>
+  <canvas id="MMFCanvas" width="1280" height="720">
+    Your browser does not support Canvas, Please try again.
+  </canvas>
 
   <div id="progress-container">
     <div style="margin-bottom: 6px;">Downloading... <span id="download-text">0%</span></div>
@@ -82,28 +52,5 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <script src="main.js"></script>
-
-  <script>
-    // 🔥 Keep the canvas scaled correctly on resize
-    const canvas = document.getElementById('MMFCanvas');
-    function resizeCanvas() {
-      const aspect = 1280 / 720;
-      let width = window.innerWidth;
-      let height = window.innerHeight;
-
-      if (width / height > aspect) {
-        width = height * aspect;
-      } else {
-        height = width / aspect;
-      }
-
-      canvas.style.width = width + 'px';
-      canvas.style.height = height + 'px';
-    }
-
-    window.addEventListener('resize', resizeCanvas);
-    resizeCanvas();
-  </script>
 </body>
-
 </html>
